# amagi-rs

./: .env.example  .env.example.zh-CN  .gitignore  Cargo.toml  Cross.toml  DISCLAIMER.md  DISCLAIMER.zh-CN.md  README.md  README.zh-CN.md  build.rs
crates/amagi/: Cargo.toml  build.rs
crates/amagi-adapters/: Cargo.toml
crates/amagi-adapters/src/: context.rs  http.rs  lib.rs
crates/amagi-adapters/src/bilibili/: bound.rs  danmaku.rs
crates/amagi-adapters/src/bilibili/api/: playurl.rs  urls.rs
crates/amagi-adapters/src/bilibili/fetcher/: auth.rs  comments.rs  content.rs  helper.rs  mod.rs  requests.rs  transport.rs  user.rs
crates/amagi-adapters/src/bilibili/sign/: bv.rs  dm_img.rs  wbi.rs
crates/amagi-adapters/src/bilibili/types/: article.rs  bangumi.rs  captcha.rs  danmaku.rs  dynamic.rs
crates/amagi-adapters/src/douyin/: bound.rs  mod.rs
crates/amagi-adapters/src/douyin/api/: builder.rs
crates/amagi-adapters/src/douyin/fetcher/: content.rs  mod.rs  payload.rs  search.rs  transport.rs
crates/amagi-adapters/src/douyin/fetcher/requests/: aweme.rs  builder.rs  live.rs  resources.rs  search.rs  shared.rs  user.rs
crates/amagi-adapters/src/douyin/sign/: a_bogus.rs  mod.rs  tokens.rs  x_bogus.rs
crates/amagi-adapters/src/douyin/types/: danmaku.rs  dynamic_emoji.rs  mod.rs  music.rs  user.rs
crates/amagi-adapters/src/douyin/types/aweme/: mod.rs
crates/amagi-adapters/src/douyin/types/common/: meta.rs  mod.rs  text.rs
crates/amagi-adapters/src/internal/: md5.rs  mod.rs  random.rs  sm3.rs
crates/amagi-adapters/src/kuaishou/: bound.rs
crates/amagi-adapters/src/kuaishou/api/: builder.rs  mod.rs
crates/amagi-adapters/src/kuaishou/fetcher/: emoji.rs  graphql.rs  live_api.rs  live_fetch.rs  mod.rs  profile_fetch.rs  support.rs  value.rs  work.rs
crates/amagi-adapters/src/kuaishou/fetcher/profile/: tabs.rs
crates/amagi-adapters/src/kuaishou/fetcher/requests/: graphql.rs  live.rs  mod.rs  profile.rs  shared.rs
crates/amagi-adapters/src/kuaishou/sign/: api.rs  he.rs  hudr.rs  mod.rs  primitives.rs  state.rs
crates/amagi-adapters/src/kuaishou/sign/helpers/: mod.rs  payload.rs
crates/amagi-adapters/src/spec/: bilibili.rs  douyin.rs  kuaishou.rs  lookup.rs  mod.rs  twitter.rs  xiaohongshu.rs
crates/amagi-adapters/src/twitter/: auth.rs  bound.rs  mod.rs
crates/amagi-adapters/src/twitter/api/: builder.rs
crates/amagi-adapters/src/twitter/fetcher/: content.rs  live.rs  mod.rs  space.rs  stream.rs  transport.rs  user.rs
crates/amagi-adapters/src/twitter/sign/: html.rs  interpolate.rs  transaction.rs
crates/amagi-adapters/src/twitter/types/: live.rs  mod.rs  stream.rs  tweet.rs
crates/amagi-adapters/src/xiaohongshu/: bound.rs  mod.rs  ordered_json.rs
crates/amagi-adapters/src/xiaohongshu/api/: builder.rs
crates/amagi-adapters/src/xiaohongshu/config/: defaults.rs
crates/amagi-adapters/src/xiaohongshu/fetcher/: content.rs  mod.rs  requests.rs  search.rs  transport.rs  user.rs
crates/amagi-adapters/src/xiaohongshu/session/: manager.rs
crates/amagi-adapters/src/xiaohongshu/sign/: codec.rs  fingerprint.rs  mod.rs  payload.rs  signer.rs  x3.rs
crates/amagi-adapters/src/xiaohongshu/types/: emoji.rs
crates/amagi-adapters/src/xiaohongshu/utils/: cookie.rs  random.rs  request.rs
crates/amagi-cli/: Cargo.toml
crates/amagi-cli/locales/cli/: en-US.json  zh-CN.json
crates/amagi-cli/src/: lib.rs
crates/amagi-cli/src/app/: mod.rs
crates/amagi-cli/src/app/bilibili/: article.rs  auth.rs  content.rs  convert.rs  live.rs  mod.rs  social.rs  user.rs
crates/amagi-cli/src/app/douyin/: auth.rs  content.rs  live.rs  mod.rs  social.rs  user.rs
crates/amagi-cli/src/app/kuaishou/: content.rs  live.rs  mod.rs  user.rs
crates/amagi-cli/src/app/twitter/: content.rs  mod.rs  resolve.rs  space.rs  stream.rs  user.rs
crates/amagi-cli/src/app/xiaohongshu/: content.rs  mod.rs  search.rs  user.rs
crates/amagi-cli/src/cli/: i18n.rs  map.rs  mod.rs  resolve.rs
crates/amagi-cli/src/cli/args/: bilibili.rs  common.rs  douyin.rs  serve.rs  twitter.rs  xiaohongshu.rs
crates/amagi-cli/src/config/: app.rs  logging.rs  mod.rs  output.rs
crates/amagi-cli/src/config/tasks/: douyin.rs  kuaishou.rs  mod.rs  run.rs  twitter.rs  xiaohongshu.rs
crates/amagi-cli/src/output/: mod.rs  printer.rs
crates/amagi-cli/src/telemetry/: mod.rs
crates/amagi-client/: Cargo.toml
crates/amagi-client/src/: lib.rs
crates/amagi-client/src/events/: bus.rs  payloads.rs
crates/amagi-core/: Cargo.toml  build.rs
crates/amagi-core/src/: build_info.rs  defaults.rs  error.rs  lib.rs  platform.rs  request.rs  spec.rs
crates/amagi-docs/: Cargo.toml  Dioxus.toml  README.md
crates/amagi-docs/assets/: main.css  syntax-highlight.js
crates/amagi-docs/src/: app.rs  build_info.rs  docs_index.rs  lib.rs  main.rs  markdown.rs  models.rs  search.rs  storage.rs  theme.rs
crates/amagi-docs/src/components/: footer.rs  language.rs  layout.rs  mod.rs  not_found.rs  theme_switcher.rs
crates/amagi-server/: Cargo.toml
crates/amagi-server/src/: config.rs  lib.rs
crates/amagi-server/src/node/: client.rs  protocol.rs  session.rs
crates/amagi-server/src/server/: mod.rs  router.rs  runtime.rs  state.rs
crates/amagi-server/src/server/handlers/: common.rs  control.rs  mod.rs  node.rs  support.rs  types.rs
crates/amagi-server/src/server/handlers/bilibili/: article.rs  auth.rs  content.rs  convert.rs  live.rs  social.rs  types.rs  user.rs
crates/amagi-server/src/server/handlers/douyin/: auth.rs  content.rs  live.rs  social.rs  types.rs  user.rs
crates/amagi-server/src/server/handlers/kuaishou/: content.rs  live.rs  user.rs
crates/amagi-server/src/server/handlers/twitter/: content.rs  mod.rs  space.rs  stream.rs  types.rs  user.rs
crates/amagi-server/src/server/handlers/xiaohongshu/: content.rs  mod.rs  search.rs  types.rs  user.rs
crates/amagi-testkit/: Cargo.toml
crates/amagi-testkit/src/: bilibili.rs  client.rs  douyin.rs  env.rs  kuaishou.rs  lib.rs  twitter.rs  xiaohongshu.rs
crates/amagi-testkit/tests/: public_api.rs  server_cookie_reload.rs
crates/amagi/src/: lib.rs
(+158 files in other folders)
