[workspace]
members = [
    "crates/amagi",
    "crates/amagi-core",
    "crates/amagi-adapters",
    "crates/amagi-client",
    "crates/amagi-server",
    "crates/amagi-cli",
    "crates/amagi-testkit",
    "crates/amagi-docs",
]
resolver = "3"

[workspace.package]
version = "0.1.6"
edition = "2024"
license = "GPL-3.0-only"
homepage = "https://github.com/bandange/amagi-rs"
repository = "https://github.com/bandange/amagi-rs"
documentation = "https://docs.rs/amagi"

[workspace.dependencies]
amagi-core = { path = "crates/amagi-core", version = "0.1.6" }
amagi-adapters = { path = "crates/amagi-adapters", version = "0.1.6" }
amagi-client = { path = "crates/amagi-client", version = "0.1.6" }
amagi-server = { path = "crates/amagi-server", version = "0.1.6" }
amagi-cli = { path = "crates/amagi-cli", version = "0.1.6" }

axum = { version = "0.8.9", features = ["ws"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
reqwest = { version = "0.13.3", default-features = false, features = [
    "json",
    "form",
    "gzip",
    "brotli",
    "deflate",
    "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
    "time",
] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
tower-http = { version = "0.6.10", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
