[package]
name = "amagi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Command-line runtime for amagi."
publish = true

[features]
default = []
server = ["dep:amagi-server"]

[dependencies]
amagi-core.workspace = true
amagi-client.workspace = true
amagi-adapters = { workspace = true, features = ["cli"] }
amagi-server = { workspace = true, optional = true }
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
