[package]
name = "amagi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Shared core types and configuration helpers for amagi."
publish = true
build = "build.rs"

[dependencies]
dotenvy.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
