[package]
name = "amagi-server"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Axum HTTP server and node transport for amagi."
publish = true

[dependencies]
amagi-core.workspace = true
amagi-client.workspace = true
amagi-adapters.workspace = true
axum.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tower-http.workspace = true
tracing.workspace = true
